test/positive/feature_constructoroverloading.java

public class feature_constructoroverloading {
  public feature_constructoroverloading() {}
  public feature_constructoroverloading(int x) {}
}

