test/negative/ClassInheritIdenticalSignaturesCanonical/B.java
package B;
public class B {
    public B() {}
    public int x(X p) { return 0; }
}
